port an older post, add video

--- a/input/2026-02-05T21:38:22Z_arpeggios.md
+++ b/input/2026-02-05T21:38:22Z_arpeggios.md
@@ -14,3 +14,7 @@ Also added euclidean rhythms the other day and [rhythms.hpp](https://github.com/
 Then the [synthetic clock generator](https://github.com/lerouxb/platform16-firmware/blob/main/lib/inoutclock.hpp) thingy was written by me manually originally then factored out manually, then it vibe-wrote the description. And got it perfectly accurate!
 
 fun!
+
+<div class="video-16-9">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0UYqWQhRu0E?si=45c9JU-LkBdewzhi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
