--- a/input/2024-01-02T18:36:00Z_ULP.md
+++ b/input/2024-01-02T18:36:00Z_ULP.md
@@ -1,3 +1,7 @@
+---
+title: A LS013B7DH03 driver in the ESP32 ULP co-processor
+---
+
 I've been working with Sharp's [LS013B7DH03](https://www.digikey.ie/en/products/detail/sharp-microelectronics/LS013B7DH03/5300387) memory LCD. While looking for a driver to use with MicroPython I realised that they all invert some COM signal every time they update the display, usually with a vague comment about how you have to update the display regularly. The EXTCOMIN and EXTMODE pins also baffled me until I eventually found [this handy bit of documentation](https://github.com/peterhinch/micropython-nano-gui/blob/master/DRIVERS.md#4-drivers-for-sharp-displays) by Peter Hinch that explains it.
 
 So basically one way or another the COM signal has to be inverted regularly or you'll gradually damage the LCD. I agree that doing that in software seems to be easier. For my application I want to keep the ESP32 in deep sleep as long as possible and waking from deep sleep takes a significant part of a second, so waking every second or so to invert the signal is out of the question.
