--- a/input/2026-02-05T21:38:22Z_arpeggios.md
+++ b/input/2026-02-05T21:38:22Z_arpeggios.md
@@ -1,4 +1,5 @@
 ---
+title: Platform 16 Arpeggios
 ---
 
 Added an arpeggiator to the new ["two-tone euclidean polymeter"](https://github.com/lerouxb/platform16-firmware/tree/main/firmware/tep) firmware for platform 16 this morning, reusing code from when I made the [fm chord](https://github.com/lerouxb/platform16-firmware/tree/main/firmware/pmd) synth. So you can pick a "degree" in the scale and then it chooses the "right" chord shape for that point in the scale (major, minor, diminished, augmented) and you can arpeggiate the notes in that chord. Various arpeggio algorithms to pick form starting with off where it just plays the chord's root note.
