--- a/input/2026-02-08T22:27:54Z_static-attic.md
+++ b/input/2026-02-08T22:27:54Z_static-attic.md
@@ -2,7 +2,7 @@
 title: Static Attic
 ---
 
-I tried out Claude Code on a little project - a static blog generator for this blog to be run on GitHub Pages. I used Gemini to help come up with a temporary name just so I could create the folder and move on. I asked for two words that rhyme, starting with "static" and it came up with Static Attic. 
+I tried out Claude Code on a little project - [a static blog generator](https://github.com/lerouxb/lerouxb.github.io) for this blog to be run on GitHub Pages. I used Gemini to help come up with a temporary name just so I could create the folder and move on. I asked for two words that rhyme, starting with "static" and it came up with Static Attic. 
 
 I got the html5 template from there too and got to work. I wanted a super minimal template, so I just started hand-crafting some html that would serve as the first post, the design and also an example for Claude as to what I want.
 
